--- a/Gustagram/Info.plist
+++ b/Gustagram/Info.plist
@@ -21,5 +21,13 @@
 			</array>
 		</dict>
 	</dict>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key><true/>
+    </dict>
+    <key>UIUserInterfaceStyle</key>
+    <string>Light</string>
+    <key>NSCameraUsageDescription</key>
+    <string>$(PRODUCT_NAME) uses camera</string>
 </dict>
 </plist>
